--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Kalkulator JS</title>
 </head>
 <body>
+    <h1>Halooo</h1>
     <h1>Kalkulator JS</h1>
     <div class="container">
         <input type="text" class="output" >
